k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  namespace: simple-bank
  labels:
    app: simple-bank-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: ghcr.io/kwalter26/udemy-simplebank:0.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ghcr-pull-cred
